// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Om foreldrepenger matcher snapshot 1`] = `
<DocumentFragment>
  .c4 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
}

.c4 >h3 {
  margin-bottom: 1rem;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c5 dt {
  color: #645f5a;
}

.c5 >div {
  margin: 0.5625rem 0;
  padding-right: 0.7rem;
  width: 13rem;
  overflow-wrap: break-word;
}

.c13 {
  overflow: auto;
  box-shadow: 0 0 0 0.07rem rgba(0, 0, 0, 0.25);
  border-radius: .25rem;
  background-color: white;
}

.c13 [role='table'] {
  text-align: left;
  width: 100%;
}

.c13 [role='table'] thead,
.c13 [role='table'] .thead[role='rowgroup'] {
  border-bottom: 0.2rem solid rgba(0, 0, 0, 0.15);
  font-weight: 600;
}

.c13 [role='table'] [role='cell'],
.c13 [role='table'] [role='columnheader'] {
  padding: 0.7rem;
  vertical-align: middle;
}

.c13 [role='table'] [role='columnheader'] {
  padding-bottom: 0.7rem;
}

.c13 [role='table'] [role='row']:nth-child(even) {
  background-color: rgba(0, 0, 0, 0.1);
}

.c10 {
  background-color: #cce1f3;
  padding: 0.2rem 0.9375rem;
}

.c9 ol {
  padding: 0;
  margin: 0;
}

.c12 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
  white-space: nowrap;
}

.c12 >*:not(:last-child) {
  margin-bottom: 1rem;
}

.c11 {
  padding: .5rem;
}

.c7 span:not(:last-child):after {
  content: '.';
}

.c6 li:not(:first-child) {
  padding-top: 1rem;
  margin-top: 1rem;
  border-top: solid 0.0625rem #b7b1a9;
}

.c8 {
  margin-top: 1rem;
}

.c2 {
  padding: .5rem;
  display: flex;
  flex-wrap: wrap;
}

.c2 >* {
  flex-basis: 40%;
  flex-grow: 1;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c3 >* {
  flex-grow: 1;
}

.c1 {
  padding: 0rem;
}

.c0 >* {
  margin-bottom: 0.5rem;
}

<section
    class="c0"
  >
    <h2
      class="sr-only"
      id="Helt tilfeldig ID"
      tabindex="-1"
    >
      Valgt ytelse
    </h2>
    <article>
      <div
        aria-labelledby="Helt tilfeldig ID"
        class="panel c1"
      >
        <h2
          class="sr-only"
          id="Helt tilfeldig ID"
          tabindex="-1"
        >
          Foreldrepengerettighet
        </h2>
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <article
              aria-labelledby="Helt tilfeldig ID"
              class="c4"
            >
              <h3
                class="typo-ingress"
                id="Helt tilfeldig ID"
              >
                Om foreldrepengeretten
              </h3>
              <dl
                class="c5"
              >
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Foreldrepengetype
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    Fødselspenger
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Dekningsgrad
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    34%
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Rettighet fra dato
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    29.04.2017
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Graderingsdager
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    55
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Restdager
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    41
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Maksdato
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Arbeidskategori
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    Arbeidstaker
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Fedrekvote til og med
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    10.02.2019
                  </dd>
                </div>
              </dl>
            </article>
            <article
              aria-labelledby="Helt tilfeldig ID"
              class="c4"
            >
              <h3
                class="typo-ingress"
                id="Helt tilfeldig ID"
              >
                Om barnet
              </h3>
              <dl
                class="c5"
              >
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Termindato
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    11.02.2019
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Fødselsdato
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    11.02.2019
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Annen forelder
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    03063850003
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Antall barn
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    5
                  </dd>
                </div>
              </dl>
            </article>
          </div>
          <article
            aria-labelledby="Helt tilfeldig ID"
            class="c4"
          >
            <h3
              class="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Arbeidssituasjon
            </h3>
            <ol
              aria-label="Arbeidsgivere"
              class="c6"
            >
              <li>
                <dl
                  class="c5"
                >
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Arbeidsgiver
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Bakke - Solheim
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Kontonummer
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      <span
                        class="c7"
                      >
                        <span>
                          3517
                        </span>
                        <span>
                          91
                        </span>
                        <span>
                          78779
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekstsperiode
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Månedlig
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekt for perioden
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      40 062,00 NOK
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjonstype
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Ikke refusjon
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjon til dato
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      11.02.2019
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Sykepenger fra og med
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      10.02.2019
                    </dd>
                  </div>
                </dl>
              </li>
            </ol>
            <button
              class="knapp c8 knapp--hoved"
              type="submit"
            >
              Vis alle arbeidsforhold
            </button>
          </article>
        </div>
        <ol>
          <li
            class="c9"
          >
            <div
              class="c10"
            >
              <h3
                class="typo-element"
              >
                Periode 1 - 29.04.2017
              </h3>
            </div>
            <article
              class="c11"
            >
              <article
                aria-labelledby="Helt tilfeldig ID"
                class="c4"
              >
                <h3
                  class="typo-ingress"
                  id="Helt tilfeldig ID"
                >
                  Om foreldrepengeperioden
                </h3>
                <dl
                  class="c5"
                >
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Arbeidsprosent mor
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      58%
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Mors situasjon
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      nobis sit quo et quis
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Disponibel gradering
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      9%
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Forskyvelsesperiode
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      08.10.2014 - 22.08.2014
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Andre forskyvelsesperiode
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      09.12.2014 - 26.08.2014
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Midlertidig stans
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      2019-02-10
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Stansårsak
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Avsluttet
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Avslått
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Avslått
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Mødrekvote
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      —
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Rett til Mødrekvote
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Ingen rett til mødrekvote
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Aleneomsorg Mor
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      —
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Fedrekvote
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      —
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Rett til Fedrekvote
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Rett til fedrekvote
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Aleneomsorg Far
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      —
                    </dd>
                  </div>
                </dl>
              </article>
              <section
                class="c12"
              >
                <h4
                  class="typo-ingress"
                >
                  Utbetalinger
                </h4>
                <div
                  class="c13 typo-normal"
                >
                  <table
                    role="table"
                  >
                    <thead
                      role="rowgroup"
                    >
                      <tr
                        role="row"
                      >
                        <th
                          role="columnheader"
                        >
                          Reg.dato
                        </th>
                        <th
                          role="columnheader"
                        >
                          Type
                        </th>
                        <th
                          role="columnheader"
                        >
                          Periode
                        </th>
                        <th
                          role="columnheader"
                        >
                          Utb.grad
                        </th>
                        <th
                          role="columnheader"
                        >
                          Dagsats
                        </th>
                        <th
                          role="columnheader"
                        >
                          Bruttobeløp
                        </th>
                        <th
                          role="columnheader"
                        >
                          Arb.giver
                        </th>
                        <th
                          role="columnheader"
                        >
                          Org.nummer
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      data-testid="table-tbody"
                      role="rowgroup"
                    >
                      <tr
                        role="row"
                      >
                        <td
                          role="cell"
                        >
                          25.06.2018
                        </td>
                        <td
                          role="cell"
                        >
                          KONTOØVERFØRING
                        </td>
                        <td
                          role="cell"
                        >
                          14.01.2018 - 15.07.2017
                        </td>
                        <td
                          role="cell"
                        >
                          79%
                        </td>
                        <td
                          role="cell"
                        >
                          705,00 NOK
                        </td>
                        <td
                          role="cell"
                        >
                          466,00 NOK
                        </td>
                        <td
                          role="cell"
                        >
                          Vedvik - Lunde
                        </td>
                        <td
                          role="cell"
                        >
                          1234567890
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  class="alertstripe alertstripe--info"
                >
                  <span
                    class="alertstripe__ikon"
                  >
                    <span
                      class="sr-only"
                    >
                      info
                    </span>
                    <svg
                      aria-label="info-ikon"
                      focusable="false"
                      height="1.5em"
                      kind="info-sirkel-fyll"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1.5em"
                    >
                      <g
                        fill="none"
                      >
                        <path
                          d="M12 0C5.382 0 0 5.382 0 12s5.382 12 12 12c6.617 0 12-5.382 12-12S18.617 0 12 0z"
                          fill="#337C9B"
                        />
                        <path
                          d="M12 5a1.566 1.566 0 1 1 .11 3.13A1.566 1.566 0 0 1 12 5zm2.976 12.01c.563 0 1.043.431 1.043.991s-.48.992-1.043.992H9.39c-.564 0-1.043-.431-1.043-.992 0-.56.479-.99 1.043-.99h1.6v-5.016h-.986c-.565 0-1.044-.43-1.044-.991 0-.56.48-.991 1.044-.991h2.03c.563 0 1.043.43 1.043.99v6.007h1.899z"
                          fill="#FFF"
                        />
                      </g>
                    </svg>
                  </span>
                  <div
                    class="typo-normal alertstripe__tekst"
                  >
                    For detaljer om utførte utbetalinger 
                    <a
                      href="/person/utbetaling"
                    >
                      se Utbetalingsoversikten.
                    </a>
                  </div>
                </div>
              </section>
            </article>
          </li>
        </ol>
      </div>
    </article>
  </section>
</DocumentFragment>
`;

exports[`Om pleiepenger matcher snapshot 1`] = `
<DocumentFragment>
  .c3 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
}

.c3 >h3 {
  margin-bottom: 1rem;
}

.c4 {
  display: flex;
  flex-wrap: wrap;
}

.c4 dt {
  color: #645f5a;
}

.c4 >div {
  margin: 0.5625rem 0;
  padding-right: 0.7rem;
  width: 13rem;
  overflow-wrap: break-word;
}

.c11 {
  overflow: auto;
  box-shadow: 0 0 0 0.07rem rgba(0, 0, 0, 0.25);
  border-radius: .25rem;
  background-color: white;
}

.c11 [role='table'] {
  text-align: left;
  width: 100%;
}

.c11 [role='table'] thead,
.c11 [role='table'] .thead[role='rowgroup'] {
  border-bottom: 0.2rem solid rgba(0, 0, 0, 0.15);
  font-weight: 600;
}

.c11 [role='table'] [role='cell'],
.c11 [role='table'] [role='columnheader'] {
  padding: 0.7rem;
  vertical-align: middle;
}

.c11 [role='table'] [role='columnheader'] {
  padding-bottom: 0.7rem;
}

.c11 [role='table'] [role='row']:nth-child(even) {
  background-color: rgba(0, 0, 0, 0.1);
}

.c9 {
  background-color: #cce1f3;
  padding: 0.2rem 0.9375rem;
}

.c8 ol {
  padding: 0;
  margin: 0;
}

.c6 span:not(:last-child):after {
  content: '.';
}

.c5 li:not(:first-child) {
  padding-top: 1rem;
  margin-top: 1rem;
  border-top: solid 0.0625rem #b7b1a9;
}

.c7 {
  margin-top: 1rem;
}

.c2 {
  padding: .5rem;
  display: flex;
  flex-wrap: wrap;
}

.c2 >* {
  flex-basis: 40%;
  flex-grow: 1;
}

.c10 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
  margin: .5rem;
}

.c10 >*:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  padding: 0rem;
}

.c0 >* {
  margin-bottom: 0.5rem;
}

<section
    class="c0"
  >
    <h2
      class="sr-only"
      id="Helt tilfeldig ID"
      tabindex="-1"
    >
      Valgt ytelse
    </h2>
    <article>
      <div
        aria-labelledby="Helt tilfeldig ID"
        class="panel c1"
      >
        <h2
          class="sr-only"
          id="Helt tilfeldig ID"
        >
          Pleiepengerrettighet
        </h2>
        <div
          class="c2"
        >
          <article
            aria-labelledby="Helt tilfeldig ID"
            class="c3"
          >
            <h3
              class="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Om pleiepengeretten
            </h3>
            <dl
              class="c4"
            >
              <div>
                <dt
                  class="typo-normal"
                >
                  Fra og med
                </dt>
                <dd
                  class="typo-element"
                >
                  29.09.2017
                </dd>
              </div>
              <div>
                <dt
                  class="typo-normal"
                >
                  Til og med
                </dt>
                <dd
                  class="typo-element"
                >
                  24.10.2017
                </dd>
              </div>
              <div>
                <dt
                  class="typo-normal"
                >
                  Pleiepengegrad
                </dt>
                <dd
                  class="typo-element"
                >
                  66%
                </dd>
              </div>
              <div>
                <dt
                  class="typo-normal"
                >
                  Barnet (jente)
                </dt>
                <dd
                  class="typo-element"
                >
                  12345678910
                </dd>
              </div>
              <div>
                <dt
                  class="typo-normal"
                >
                  Annen forelder
                </dt>
                <dd
                  class="typo-element"
                >
                  26087625779
                </dd>
              </div>
            </dl>
          </article>
          <article
            aria-labelledby="Helt tilfeldig ID"
            class="c3"
          >
            <h3
              class="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Arbeidssituasjon
            </h3>
            <ol
              aria-label="Arbeidsgivere"
              class="c5"
            >
              <li>
                <dl
                  class="c4"
                >
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Arbeidsgiver
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Ryan og Sønner
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Kontonummer
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      <span
                        class="c6"
                      >
                        <span>
                          5493
                        </span>
                        <span>
                          85
                        </span>
                        <span>
                          21445
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekstsperiode
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Månedssats
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekt for perioden
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      45 029,00 NOK
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjonstype
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Ikke refusjon
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjon til dato
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      11.10.2018
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Sykepenger fra og med
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      —
                    </dd>
                  </div>
                </dl>
              </li>
            </ol>
            <button
              class="knapp c7 knapp--hoved"
              type="submit"
            >
              Vis alle arbeidsforhold
            </button>
          </article>
        </div>
        <ol>
          <li
            class="c8"
          >
            <div
              class="c9"
            >
              <h3
                class="typo-element"
              >
                Periode 2 - 14.11.2018
              </h3>
            </div>
            <div
              class="c10"
            >
              <p
                class="typo-ingress"
              >
                Anviste utbetalinger
              </p>
              <div
                class="c11 typo-normal"
              >
                <table
                  role="table"
                >
                  <thead
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <th
                        role="columnheader"
                      >
                        Fra og med
                      </th>
                      <th
                        role="columnheader"
                      >
                        Til og med
                      </th>
                      <th
                        role="columnheader"
                      >
                        Bruttobeløp
                      </th>
                      <th
                        role="columnheader"
                      >
                        Anvist utbetaling
                      </th>
                      <th
                        role="columnheader"
                      >
                        Dagsats
                      </th>
                      <th
                        role="columnheader"
                      >
                        Pleiepengegrad
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    data-testid="table-tbody"
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <td
                        role="cell"
                      >
                        29.09.2017
                      </td>
                      <td
                        role="cell"
                      >
                        24.10.2017
                      </td>
                      <td
                        role="cell"
                      >
                        120,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        28.05.2017
                      </td>
                      <td
                        role="cell"
                      >
                        5,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        66%
                      </td>
                    </tr>
                    <tr
                      role="row"
                    >
                      <td
                        role="cell"
                      >
                        18.07.2017
                      </td>
                      <td
                        role="cell"
                      >
                        26.07.2017
                      </td>
                      <td
                        role="cell"
                      >
                        596,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        21.06.2017
                      </td>
                      <td
                        role="cell"
                      >
                        27,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        58%
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </li>
          <li
            class="c8"
          >
            <div
              class="c9"
            >
              <h3
                class="typo-element"
              >
                Periode 1 - 16.10.2018
              </h3>
            </div>
            <div
              class="c10"
            >
              <p
                class="typo-ingress"
              >
                Anviste utbetalinger
              </p>
              <div
                class="c11 typo-normal"
              >
                <table
                  role="table"
                >
                  <thead
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <th
                        role="columnheader"
                      >
                        Fra og med
                      </th>
                      <th
                        role="columnheader"
                      >
                        Til og med
                      </th>
                      <th
                        role="columnheader"
                      >
                        Bruttobeløp
                      </th>
                      <th
                        role="columnheader"
                      >
                        Anvist utbetaling
                      </th>
                      <th
                        role="columnheader"
                      >
                        Dagsats
                      </th>
                      <th
                        role="columnheader"
                      >
                        Pleiepengegrad
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    data-testid="table-tbody"
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <td
                        role="cell"
                      >
                        01.12.2018
                      </td>
                      <td
                        role="cell"
                      >
                        09.12.2018
                      </td>
                      <td
                        role="cell"
                      >
                        69,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        29.06.2018
                      </td>
                      <td
                        role="cell"
                      >
                        12,00 NOK
                      </td>
                      <td
                        role="cell"
                      >
                        92%
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </li>
        </ol>
      </div>
    </article>
  </section>
</DocumentFragment>
`;

exports[`Om sykepenger matcher snapshot 1`] = `
<DocumentFragment>
  .c4 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
}

.c4 >h3 {
  margin-bottom: 1rem;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c5 dt {
  color: #645f5a;
}

.c5 >div {
  margin: 0.5625rem 0;
  padding-right: 0.7rem;
  width: 13rem;
  overflow-wrap: break-word;
}

.c6 {
  overflow: auto;
  box-shadow: 0 0 0 0.07rem rgba(0, 0, 0, 0.25);
  border-radius: .25rem;
  background-color: white;
}

.c6 [role='table'] {
  text-align: left;
  width: 100%;
}

.c6 [role='table'] thead,
.c6 [role='table'] .thead[role='rowgroup'] {
  border-bottom: 0.2rem solid rgba(0, 0, 0, 0.15);
  font-weight: 600;
}

.c6 [role='table'] [role='cell'],
.c6 [role='table'] [role='columnheader'] {
  padding: 0.7rem;
  vertical-align: middle;
}

.c6 [role='table'] [role='columnheader'] {
  padding-bottom: 0.7rem;
}

.c6 [role='table'] [role='row']:nth-child(even) {
  background-color: rgba(0, 0, 0, 0.1);
}

.c11 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
  white-space: nowrap;
}

.c11 >*:not(:last-child) {
  margin-bottom: 1rem;
}

.c8 span:not(:last-child):after {
  content: '.';
}

.c7 li:not(:first-child) {
  padding-top: 1rem;
  margin-top: 1rem;
  border-top: solid 0.0625rem #b7b1a9;
}

.c9 {
  margin-top: 1rem;
}

.c10 {
  border-radius: 0.5rem;
  background-color: #f1f0f0;
  box-shadow: inset 0 0 0 0.3rem white,inset 0 0 0 0.37rem rgba(0, 0, 0, 0.15);
  padding: 1.25rem;
  white-space: nowrap;
}

.c10 >*:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  padding: .5rem;
}

.c2 {
  display: flex;
  flex-wrap: wrap;
}

.c2 >* {
  flex-basis: 40%;
  flex-grow: 1;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c3 >* {
  flex-grow: 1;
}

.c0 >* {
  margin-bottom: 0.5rem;
}

<section
    class="c0"
  >
    <h2
      class="sr-only"
      id="Helt tilfeldig ID"
      tabindex="-1"
    >
      Valgt ytelse
    </h2>
    <article>
      <div
        aria-labelledby="Helt tilfeldig ID"
        class="panel c1"
      >
        <h2
          class="sr-only"
          id="Helt tilfeldig ID"
        >
          Sykepengerrettighet
        </h2>
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <article
              aria-labelledby="Helt tilfeldig ID"
              class="c4"
            >
              <h3
                class="typo-ingress"
                id="Helt tilfeldig ID"
              >
                Sykepengetilfellet
              </h3>
              <dl
                class="c5"
              >
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Sykemeldt fra og med
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    06.02.2019
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Forbrukte dager
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    23
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Untatt aktivitet
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Midlertidig stans
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    —
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Sanksjonperiode
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    19.01.2014 - 05.09.2014
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Ferieperioder
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    19.01.2014 - 14.01.2014
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Forsikring
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    837,00 NOK
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Gyldig forsikring
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    Nei
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Forsikringsperiode
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    —
                  </dd>
                </div>
              </dl>
            </article>
            <article
              aria-labelledby="Helt tilfeldig ID"
              class="c4"
            >
              <h3
                class="typo-ingress"
                id="Helt tilfeldig ID"
              >
                Sykmelding
              </h3>
              <dl
                class="c5"
              >
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Periode
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    09.02.2014 - 11.05.2014
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Behandlingsdato
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    01.04.2018
                  </dd>
                </div>
                <div>
                  <dt
                    class="typo-normal"
                  >
                    Sykmelder
                  </dt>
                  <dd
                    class="typo-element"
                  >
                    Lommelegen AS
                  </dd>
                </div>
              </dl>
              <div
                class="c6 typo-normal"
              >
                <table
                  role="table"
                >
                  <thead
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <th
                        role="columnheader"
                      >
                        Periode
                      </th>
                      <th
                        role="columnheader"
                      >
                        Gradering
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    data-testid="table-tbody"
                    role="rowgroup"
                  >
                    <tr
                      role="row"
                    >
                      <td
                        role="cell"
                      >
                        28.07.2014 - 03.01.2014
                      </td>
                      <td
                        role="cell"
                      >
                        89%
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </article>
          </div>
          <article
            aria-labelledby="Helt tilfeldig ID"
            class="c4"
          >
            <h3
              class="typo-ingress"
              id="Helt tilfeldig ID"
            >
              Arbeidssituasjon
            </h3>
            <dl
              class="c5"
            >
              <div>
                <dt
                  class="typo-normal"
                >
                  Arbeidsgiverperiode
                </dt>
                <dd
                  class="typo-element"
                >
                  Ja
                </dd>
              </div>
              <div>
                <dt
                  class="typo-normal"
                >
                  Arbeidskategori
                </dt>
                <dd
                  class="typo-element"
                >
                  Ærlig arbeid
                </dd>
              </div>
            </dl>
            <ol
              aria-label="Arbeidsgivere"
              class="c7"
            >
              <li>
                <dl
                  class="c5"
                >
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Arbeidsgiver
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Bærlevåg Burger og Bitcoin
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Kontonummer
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      <span
                        class="c8"
                      >
                        <span>
                          8786
                        </span>
                        <span>
                          52
                        </span>
                        <span>
                          75970
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekstsperiode
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Månedssats
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Inntekt for perioden
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      39 691,00 NOK
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjonstype
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      Ikke refusjon
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Refusjon til dato
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      12.03.2018
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="typo-normal"
                    >
                      Sykepenger fra og med
                    </dt>
                    <dd
                      class="typo-element"
                    >
                      18.02.2018
                    </dd>
                  </div>
                </dl>
              </li>
            </ol>
            <button
              class="knapp c9 knapp--hoved"
              type="submit"
            >
              Vis alle arbeidsforhold
            </button>
          </article>
        </div>
        <section
          class="c10"
        >
          <h4
            class="typo-ingress"
          >
            Utbetalinger på vent
          </h4>
          <div
            class="c6 typo-normal"
          >
            <table
              role="table"
            >
              <thead
                role="rowgroup"
              >
                <tr
                  role="row"
                >
                  <th
                    role="columnheader"
                  >
                    Årsak
                  </th>
                  <th
                    role="columnheader"
                  >
                    Utbetalingsperiode
                  </th>
                  <th
                    role="columnheader"
                  >
                    Utbetalingsgrad
                  </th>
                </tr>
              </thead>
              <tbody
                data-testid="table-tbody"
                role="rowgroup"
              >
                <tr
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Pga mistenkelig oppførsel
                  </td>
                  <td
                    role="cell"
                  >
                    13.10.2017 - 10.10.2018
                  </td>
                  <td
                    role="cell"
                  >
                    62%
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Pga mistenkelig oppførsel
                  </td>
                  <td
                    role="cell"
                  >
                    13.10.2017 - 10.10.2018
                  </td>
                  <td
                    role="cell"
                  >
                    62%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </section>
        <section
          class="c11"
        >
          <h4
            class="typo-ingress"
          >
            Utbetalinger
          </h4>
          <div
            class="c6 typo-normal"
          >
            <table
              role="table"
            >
              <thead
                role="rowgroup"
              >
                <tr
                  role="row"
                >
                  <th
                    role="columnheader"
                  >
                    Reg.dato
                  </th>
                  <th
                    role="columnheader"
                  >
                    Type
                  </th>
                  <th
                    role="columnheader"
                  >
                    Periode
                  </th>
                  <th
                    role="columnheader"
                  >
                    Utb.grad
                  </th>
                  <th
                    role="columnheader"
                  >
                    Dagsats
                  </th>
                  <th
                    role="columnheader"
                  >
                    Bruttobeløp
                  </th>
                  <th
                    role="columnheader"
                  >
                    Arb.giver
                  </th>
                  <th
                    role="columnheader"
                  >
                    Org.nummer
                  </th>
                </tr>
              </thead>
              <tbody
                data-testid="table-tbody"
                role="rowgroup"
              >
                <tr
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    25.06.2018
                  </td>
                  <td
                    role="cell"
                  >
                    KONTOØVERFØRING
                  </td>
                  <td
                    role="cell"
                  >
                    14.01.2018 - 15.07.2017
                  </td>
                  <td
                    role="cell"
                  >
                    79%
                  </td>
                  <td
                    role="cell"
                  >
                    705,00 NOK
                  </td>
                  <td
                    role="cell"
                  >
                    466,00 NOK
                  </td>
                  <td
                    role="cell"
                  >
                    Vedvik - Lunde
                  </td>
                  <td
                    role="cell"
                  >
                    1234567890
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    25.06.2018
                  </td>
                  <td
                    role="cell"
                  >
                    KONTOØVERFØRING
                  </td>
                  <td
                    role="cell"
                  >
                    14.01.2018 - 15.07.2017
                  </td>
                  <td
                    role="cell"
                  >
                    79%
                  </td>
                  <td
                    role="cell"
                  >
                    705,00 NOK
                  </td>
                  <td
                    role="cell"
                  >
                    466,00 NOK
                  </td>
                  <td
                    role="cell"
                  >
                    Vedvik - Lunde
                  </td>
                  <td
                    role="cell"
                  >
                    1234567890
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="alertstripe alertstripe--info"
          >
            <span
              class="alertstripe__ikon"
            >
              <span
                class="sr-only"
              >
                info
              </span>
              <svg
                aria-label="info-ikon"
                focusable="false"
                height="1.5em"
                kind="info-sirkel-fyll"
                role="img"
                viewBox="0 0 24 24"
                width="1.5em"
              >
                <g
                  fill="none"
                >
                  <path
                    d="M12 0C5.382 0 0 5.382 0 12s5.382 12 12 12c6.617 0 12-5.382 12-12S18.617 0 12 0z"
                    fill="#337C9B"
                  />
                  <path
                    d="M12 5a1.566 1.566 0 1 1 .11 3.13A1.566 1.566 0 0 1 12 5zm2.976 12.01c.563 0 1.043.431 1.043.991s-.48.992-1.043.992H9.39c-.564 0-1.043-.431-1.043-.992 0-.56.479-.99 1.043-.99h1.6v-5.016h-.986c-.565 0-1.044-.43-1.044-.991 0-.56.48-.991 1.044-.991h2.03c.563 0 1.043.43 1.043.99v6.007h1.899z"
                    fill="#FFF"
                  />
                </g>
              </svg>
            </span>
            <div
              class="typo-normal alertstripe__tekst"
            >
              For detaljer om utførte utbetalinger 
              <a
                href="/person/utbetaling"
              >
                se Utbetalingsoversikten.
              </a>
            </div>
          </div>
        </section>
      </div>
    </article>
  </section>
</DocumentFragment>
`;
